--- a/Beat3/Cube.html
+++ b/Beat3/Cube.html
@@ -669,6 +669,26 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
+/*#/#*//*#i4.i416.shape.css:shape/base/css*/
+#i416 { background-color: #dedede; opacity: 0.00;
+}
+/*#/#*//*#i416.i417.positioning.css:positioning/base/css.2*/
+#i416 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 7.666666666666667%; height: 6.5%;
+        -ms-transform: translate(0, 0) translate(242px, 561px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(242px, 561px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(242px, 561px) rotate(0deg);
+        transform: translate(0, 0) translate(242px, 561px) rotate(0deg);
+}
+/*#/#*//*#i4.i418.shape.css:shape/base/css*/
+#i418 { background-color: #dedede; opacity: 0.00;
+}
+/*#/#*//*#i418.i419.positioning.css:positioning/base/css.2*/
+#i418 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 10.333333333333334%; height: 6.5%;
+        -ms-transform: translate(0, 0) translate(265px, 561px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(265px, 561px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(265px, 561px) rotate(0deg);
+        transform: translate(0, 0) translate(265px, 561px) rotate(0deg);
+}
 /*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i4 { cursor: pointer; }
 /*#/#*//*#i5.i30.shape.css:shape/base/css*/
@@ -717,6 +737,26 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i5.i424.shape.css:shape/base/css*/
+#i424 { background-color: #dedede; opacity: 0.00;
+}
+/*#/#*//*#i424.i425.positioning.css:positioning/base/css.2*/
+#i424 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 7.666666666666667%; height: 6.5%;
+        -ms-transform: translate(0, 0) translate(242px, 561px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(242px, 561px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(242px, 561px) rotate(0deg);
+        transform: translate(0, 0) translate(242px, 561px) rotate(0deg);
+}
+/*#/#*//*#i5.i432.shape.css:shape/base/css*/
+#i432 { background-color: #dedede; opacity: 0.00;
+}
+/*#/#*//*#i432.i433.positioning.css:positioning/base/css.2*/
+#i432 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 10.333333333333334%; height: 6.5%;
+        -ms-transform: translate(0, 0) translate(265px, 561px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(265px, 561px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(265px, 561px) rotate(0deg);
+        transform: translate(0, 0) translate(265px, 561px) rotate(0deg);
 }
 /*#/#*//*#i52.i53.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i5 { cursor: pointer; }
@@ -767,6 +807,26 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(-1px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(-1px, 0px) rotate(0deg);
 }
+/*#/#*//*#i6.i428.shape.css:shape/base/css*/
+#i428 { background-color: #dedede; opacity: 0.00;
+}
+/*#/#*//*#i428.i429.positioning.css:positioning/base/css.2*/
+#i428 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 7.666666666666667%; height: 6.5%;
+        -ms-transform: translate(0, 0) translate(242px, 561px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(242px, 561px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(242px, 561px) rotate(0deg);
+        transform: translate(0, 0) translate(242px, 561px) rotate(0deg);
+}
+/*#/#*//*#i6.i436.shape.css:shape/base/css*/
+#i436 { background-color: #dedede; opacity: 0.00;
+}
+/*#/#*//*#i436.i437.positioning.css:positioning/base/css.2*/
+#i436 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 10.333333333333334%; height: 6.5%;
+        -ms-transform: translate(0, 0) translate(265px, 561px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(265px, 561px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(265px, 561px) rotate(0deg);
+        transform: translate(0, 0) translate(265px, 561px) rotate(0deg);
+}
 /*#/#*//*#i54.i55.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i6 { cursor: pointer; }
 /*#/#*//*#i2.i3.positioning.css:positioning/base/css.1*/
@@ -795,6 +855,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i410" src="https://i.imgur.com/PuxJURZ.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
+<!--#/#--><!--#i4.i416.shape.html:shape/html-->
+<div id="i416"></div>
+<!--#/#--><!--#i4.i418.shape.html:shape/html-->
+<div id="i418"></div>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i2.i5.cube-panel.html:cube-panel/html-->
@@ -809,6 +873,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i406" src="https://i.imgur.com/ocSzabB.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
+<!--#/#--><!--#i5.i424.shape.html:shape/html-->
+<div id="i424"></div>
+<!--#/#--><!--#i5.i432.shape.html:shape/html-->
+<div id="i432"></div>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i2.i6.cube-panel.html:cube-panel/html-->
@@ -823,6 +891,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i414" src="https://i.imgur.com/PuxJURZ.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
+<!--#/#--><!--#i6.i428.shape.html:shape/html-->
+<div id="i428"></div>
+<!--#/#--><!--#i6.i436.shape.html:shape/html-->
+<div id="i436"></div>
 <!--#/#-->
 </div>
 <!--#/#-->
@@ -885,6 +957,36 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
+/*#/#*//*#i416.i417.positioning.js:positioning/base/js.2*/
+bmShow('i416');
+/*#/#*//*#i416.i420.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i416');
+
+el.addEventListener('click', function(e){
+    /*#i420.i421.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG6')) : window.open(dhtml.getVar('clickTAG6', 'https://apps.apple.com/co/app/beat-ride-app/id436031420'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
+/*#/#*//*#i418.i419.positioning.js:positioning/base/js.2*/
+bmShow('i418');
+/*#/#*//*#i418.i422.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i418');
+
+el.addEventListener('click', function(e){
+    /*#i422.i423.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://play.google.com/store/apps/details?id=gr.androiddev.taxibeat&hl=es_CO'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
 
@@ -913,6 +1015,36 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
+/*#/#*//*#i424.i425.positioning.js:positioning/base/js.2*/
+bmShow('i424');
+/*#/#*//*#i424.i426.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i424');
+
+el.addEventListener('click', function(e){
+    /*#i426.i427.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG6')) : window.open(dhtml.getVar('clickTAG6', 'https://apps.apple.com/co/app/beat-ride-app/id436031420'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
+/*#/#*//*#i432.i433.positioning.js:positioning/base/js.2*/
+bmShow('i432');
+/*#/#*//*#i432.i434.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i432');
+
+el.addEventListener('click', function(e){
+    /*#i434.i435.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://play.google.com/store/apps/details?id=gr.androiddev.taxibeat&hl=es_CO'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
 
@@ -935,6 +1067,36 @@ var el = document.getElementById('i99');
 el.addEventListener('click', function(e){
     /*#i336.i337.actions-clicktag.js:actions-clicktag/base/js.2*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://thebeat.co/co/'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
+/*#/#*//*#i428.i429.positioning.js:positioning/base/js.2*/
+bmShow('i428');
+/*#/#*//*#i428.i430.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i428');
+
+el.addEventListener('click', function(e){
+    /*#i430.i431.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG6')) : window.open(dhtml.getVar('clickTAG6', 'https://apps.apple.com/co/app/beat-ride-app/id436031420'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
+/*#/#*//*#i436.i437.positioning.js:positioning/base/js.2*/
+bmShow('i436');
+/*#/#*//*#i436.i438.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i436');
+
+el.addEventListener('click', function(e){
+    /*#i438.i439.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://play.google.com/store/apps/details?id=gr.androiddev.taxibeat&hl=es_CO'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -992,6 +1154,14 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Link;
 /*#/#*//*#i91.i92.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i4.i416.shape.meta:shape/meta*/
+name: MAC;
+/*#/#*//*#i416.i417.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i4.i418.shape.meta:shape/meta*/
+name: Android;
+/*#/#*//*#i418.i419.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i2.i5.cube-panel.meta:cube-panel/meta*/
     name: Cube Panel 2;
 /*#/#*//*#i5.i30.shape.meta:shape/meta*/
@@ -1017,6 +1187,14 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Link;
 /*#/#*//*#i95.i96.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i5.i424.shape.meta:shape/meta*/
+name: MAC;
+/*#/#*//*#i424.i425.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i5.i432.shape.meta:shape/meta*/
+name: Android;
+/*#/#*//*#i432.i433.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i2.i6.cube-panel.meta:cube-panel/meta*/
     name: Cube Panel 3;
 /*#/#*//*#i6.i40.shape.meta:shape/meta*/
@@ -1041,6 +1219,14 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i99.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i99.i100.positioning.meta:positioning/meta.1*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i6.i428.shape.meta:shape/meta*/
+name: MAC;
+/*#/#*//*#i428.i429.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i6.i436.shape.meta:shape/meta*/
+name: Android;
+/*#/#*//*#i436.i437.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
