--- a/Vittorio Forti/FadeGeo300x600.html
+++ b/Vittorio Forti/FadeGeo300x600.html
@@ -407,7 +407,7 @@
 <body class="tgx">
    
    
-<a href= "https://www.tous.com/mx-es/" target="_blank">
+<a href= "https://vittorioforti.com.mx/" target="_blank">
    
     <div class="tgx_wrapper carousel-wrapper size_320x480" id="cta" onclick="openUrl();"> 
        
@@ -436,13 +436,13 @@
           
             <!--   <div id="botones-para-compartir" style="display:inline;float:left;margin-left:0px; margin-top: -5px;">
                     <span>  
-                        <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.tous.com/mx-es/"  target="block">    
+                        <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://vittorioforti.com.mx/"  target="block">    
                         <img alt="compartir en facebook" class="facebooki" height="25" src="https://i.imgur.com/xZXtej2.png" title="compartir en facebook" width="25" /></a>
 
-                            <a class="shared" href="whatsapp://send?text=¡Mira lo que he encontrado! https://www.tous.com/mx-es/" target="block">
+                            <a class="shared" href="whatsapp://send?text=¡Mira lo que he encontrado! https://vittorioforti.com.mx/" target="block">
                             <img alt="compartir en whatsapp" class="googlei" height="25" src="https://i.imgur.com/9e1nigb.png" title="compartir en whatsapp" width="25" /></a>
 
-                            <a class="shared" href="https://twitter.com/home?status=https://www.tous.com/mx-es/" target="block">
+                            <a class="shared" href="https://twitter.com/home?status=https://vittorioforti.com.mx/" target="block">
                             <img alt="compartir en twitter" class="twitteri" height="25" src="https://i.imgur.com/yxu1jF2.png" title="compartir en twitter" width="25" /></a>
                     </span>
                 </div>-->
