--- a/Vittorio Forti/Venetian.html
+++ b/Vittorio Forti/Venetian.html
@@ -2308,7 +2308,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/FzGs9dV.png"/>
 <!--#/#--><!--#i63.text.html:text/html-->
-<div id="i63">¿Buscando un look para deslumprar?</div>
+<div id="i63">¿Buscando un look para deslumbrar?</div>
 <!--#/#--><!--#i116.text.html:text/html-->
 <div id="i116">Renta el smoking perfecto para esa ocasión especial: Ingresa, elige y listo.</div>
 <!--#/#--><!--#i107.image.html:image/html-->
