--- a/Chicco Tiendas/PuntaNorte2/Venetian_300x600.html
+++ b/Chicco Tiendas/PuntaNorte2/Venetian_300x600.html
@@ -2290,13 +2290,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/uFM110p.jpg"></dataimg>
-<!--#/#--><!--#i2.i64.slice-image.html:slice-image/html.1-->
-<dataimg id="i64" src="https://i.imgur.com/wySXEEt.png"></dataimg>
-<!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/BmZlaTD.png"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/sAHJFQq.jpg"></dataimg>
 <!--#/#--><!--#i2.i37.slice-image.html:slice-image/html.1-->
 <dataimg id="i37" src="https://i.imgur.com/lfZuTVu.png"></dataimg>
+<!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
+<dataimg id="i5" src="https://i.imgur.com/BmZlaTD.png"></dataimg>
+<!--#/#--><!--#i2.i64.slice-image.html:slice-image/html.1-->
+<dataimg id="i64" src="https://i.imgur.com/wySXEEt.png"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i65.image.html:image/html-->
@@ -2359,11 +2359,11 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 /*#/#*//*#i2.i4.slice-image.js:slice-image/base/js*/
 
-/*#/#*//*#i2.i64.slice-image.js:slice-image/base/js.1*/
+/*#/#*//*#i2.i37.slice-image.js:slice-image/base/js.1*/
 
 /*#/#*//*#i2.i5.slice-image.js:slice-image/base/js*/
 
-/*#/#*//*#i2.i37.slice-image.js:slice-image/base/js.1*/
+/*#/#*//*#i2.i64.slice-image.js:slice-image/base/js.1*/
 
 /*#/#*//*#i65.image.js:image/base/js*/
 
@@ -2426,14 +2426,14 @@ data: /*!*/{}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: uFM110p.jpg; fileId: ; sourceTypeId: externalUrl;
-/*#/#*//*#i2.i64.slice-image.meta:slice-image/meta.1*/
-name: wySXEEt.png; fileId: ; sourceTypeId: externalUrl;
+name: sAHJFQq.jpg; fileId: ; sourceTypeId: externalUrl;
+/*#/#*//*#i2.i37.slice-image.meta:slice-image/meta.1*/
+name: lfZuTVu.png; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
 name: BmZlaTD.png; fileId: ; sourceTypeId: externalUrl;
-/*#/#*//*#i2.i37.slice-image.meta:slice-image/meta.1*/
-name: lfZuTVu.png; fileId: ; sourceTypeId: externalUrl;
+/*#/#*//*#i2.i64.slice-image.meta:slice-image/meta.1*/
+name: wySXEEt.png; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
