--- a/Chicco Tiendas/PuntaNorte2/Venetian_300x600.html
+++ b/Chicco Tiendas/PuntaNorte2/Venetian_300x600.html
@@ -2263,16 +2263,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(65px, 492px) rotate(0deg);
         transform: translate(0, 0) translate(65px, 492px) rotate(0deg);
 }
-/*#/#*//*#i26.button.css:button/base/css*/
-#i26 { position: absolute; cursor: pointer; opacity: 1.00; background-color: rgba(0,0,0,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 0%; letter-spacing: 5px; text-shadow: 0px 0px 0px rgba(0,0,0,0); border-radius: 1px; border-color: rgba(153,153,153,1); border-width: 1px; margin:-1px; border-style: solid; }
-#i26:hover { opacity: 1; background-color: rgba(0,90,140,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,0); border-radius: 1px; border-color: rgba(46,46,46,1); border-width: 1px; margin:-1px; border-style: solid; }
-#i26:active { opacity: 1; background-color: rgba(0,80,130,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,0); border-radius: 1px; border-color: rgba(54,54,54,1); border-width: 1px; margin:-1px; border-style: solid; }
-/*#/#*//*#i26.i27.positioning.css:positioning/base/css.2*/
-#i26 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 298px; height: 598px;
-        -ms-transform: translate(0, 0) translate(1px, 1px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(1px, 1px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(1px, 1px) rotate(0deg);
-        transform: translate(0, 0) translate(1px, 1px) rotate(0deg);
+/*#/#*//*#i67.shape.css:shape/base/css*/
+#i67 { background-color: #dedede; opacity: 0.00;
+}
+/*#/#*//*#i67.i68.positioning.css:positioning/base/css.2*/
+#i67 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*/
 </style>
@@ -2305,8 +2304,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i16" src="https://i.imgur.com/csir86S.png"/>
 <!--#/#--><!--#i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/BwTcPHZ.png"/>
-<!--#/#--><!--#i26.button.html:button/html-->
-<button id="i26"></button>
+<!--#/#--><!--#i67.shape.html:shape/html-->
+<div id="i67"></div>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2377,14 +2376,14 @@ bmShow('i16');
 
 /*#/#*//*#i58.i59.positioning.js:positioning/base/js.2*/
 bmShow('i58');
-/*#/#*//*#i26.i27.positioning.js:positioning/base/js.2*/
-bmShow('i26');
-/*#/#*//*#i26.i28.actions.js:actions/base/js.1*/
+/*#/#*//*#i67.i68.positioning.js:positioning/base/js.2*/
+bmShow('i67');
+/*#/#*//*#i67.i69.actions.js:actions/base/js.1*/
 /* Name: On Click; */
-var el = document.getElementById('i26');
+var el = document.getElementById('i67');
 
 el.addEventListener('click', function(e){
-    /*#i28.i29.actions-clicktag.js:actions-clicktag/base/js.2*/
+    /*#i69.i70.actions-clicktag.js:actions-clicktag/base/js.2*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/qm8bZM7EstRwDv3Y9'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
@@ -2452,9 +2451,8 @@ name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i26.button.meta:button/meta*/
-name: ;
-customName: false;
-/*#/#*//*#i26.i27.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i67.shape.meta:shape/meta*/
+name: Shape 2;
+/*#/#*//*#i67.i68.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*/--><!--#/#-->
